--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,25 +2,43 @@
 <html>
 <head>
   <title>App1</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<nav>
-  <ul>
-    <li>Home</li>
-    <li>About</li>
-    <li>Contact</li>
-  </ul>
-</nav>
+<div class="container">
+<nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+              <a class="navbar-brand" href="#"><i>Bike Berlin</i></a>   
+          </div><!-- end navbar header -->
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#containerindex" title="Back to top" id="item1" data-placement="bottom">Home</a></li>  
+              <li><a href="#">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>  
+          </div> <!-- end nav collapse -->
+        </div> <!-- end nav container -->
+      </nav><!-- end navbar -->
+</div><!-- end container -->
 
 <%= yield %>
 
 
 <footer>
-  &copy; 2015 Bike Berlin
+  <div class="foottext">&copy; 2015 Bike Berlin</div>
 </footer>
 
 </body>
