--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,5 @@
-<h1>StaticPages#index</h1>
-<p>Find me in app/views/static_pages/index.html.erb <%= Time.now %></p>
+<div class="container" id="containerindex">
 <h1>Welcome to Bike Berlin</h1>
 <h2>Your source for used bikes in Berlin</h2>
+<%= image_tag("tandem.jpg", class: "img-responsive tandem") %>
+</div>
