--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,33 +1,37 @@
 
 <div class="container" id="prindexcontainer">
-<p id="notice"><%= notice %></p>
-
-<div class="prindextitle"><h1>Listing Products</h1></div>
-<table class="prindextable">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+ <div class="row prodrow">
     <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="col-sm-3 col-md-4 clearfix">
+      <div class="col-sm-12 col-md-12 prodcol">
+      <%= image_tag(product.image_url, class: "img-responsive") %>
+        <h2><%= product.name %></h2>
+        <div class="proddescript"><p><%= product.description %></p></div>
+        <p>Color: <%= product.color %></p>
+        <strong>$ <%= product.price %></strong>
+        <div class="colbuttons">
+        <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-default', role:'button' %>
+<%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default', role:'button' %>
+		</div>
+	</div>
+      </div><!-- /col -->
     <% end %>
-  </tbody>
-</table>
+  </div>
 
 <br>
 
-<div class="newprbutton"><%= link_to 'New Product', new_product_path, class: 'btn btn-default', role:'button' %></div>
+<div class="submitbutton"><%= link_to 'New Product', new_product_path, class: 'btn btn-default', role:'button' %>
 </div>
+</div>
+
+<script>
+$( document ).ready(function() {
+    var heights = $(".prodcol").map(function() {
+        return $(this).height();
+    }).get(),
+
+    maxHeight = Math.max.apply(null, heights);
+
+    $(".prodcol").height(maxHeight);
+});
+</script>
