--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,6 +15,14 @@
   <strong>Image url:</strong>
   <%= @product.image_url %>
 </p>
+<p>
+  <strong>Color:</strong>
+  <%= @product.color %>
+</p>
+<p>
+  <strong>Price:</strong>
+  $ <%= @product.price %>
+</p>
 
 <%= link_to 'Edit', edit_product_path(@product),class: 'btn btn-default', role:'button' %> 
 <%= link_to 'Back', products_path, class: 'btn btn-default', role:'button' %>
