product page doesn't work properly on windows, attempting a fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,16 @@
 <footer>
   <div class="foottext">&copy; 2015 Bike Berlin</div>
 </footer>
+<script>
+$( document ).ready(function() {
+    var heights = $(".prodcol").map(function() {
+        return $(this).height();
+    }).get(),
 
+    maxHeight = Math.max.apply(null, heights);
+
+    $(".prodcol").height(maxHeight);
+});
+</script>
 </body>
 </html>
