--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
   <div class="foottext">&copy; 2015 Bike Berlin</div>
 </footer>
 <script>
-$(window).onload(function() {
+$(document).ready(function() {
     var heights = $(".prodcol").map(function() {
         return $(this).height();
     }).get(),
