--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -20,10 +20,26 @@ footer{
  	background: #99ccff;
  }
 
+ img{
+ 	margin: 0 auto;
+ }
+
 .foottext{
   	padding-top: 17.5px;
   	padding-left: 20px;
  }
+
+//Landing
+
+#landingcontainer{
+	margin: 0 auto;
+}
+
+.carousel-inner .item img{
+	width: 100%;
+	height: 500px;
+}
+
 
 //Index
 #containerindex{
