--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,7 @@
+<div class="container" id="containernew">
 <h1>New Product</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', products_path %>
+</div>
