--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,8 @@
+<div class="container" id="containernew">
 <h1>Editing Product</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @product %> |
 <%= link_to 'Back', products_path %>
+</div>
