Added contact form and thank you page, trying out SendGrid on Heroku

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -57,7 +57,13 @@ footer{
 
 //Contact
 #containercontact{
+	margin: 0 auto;
  	text-align: center;
+}
+
+.contactform{
+	margin: 0 auto;
+	float: none;
 }
 
 //About
@@ -75,4 +81,6 @@ footer{
 .productform .form-control{
 	width: 25%;
 }
+
+
 
