--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,8 @@
           </div>
             <ul class="nav navbar-nav navbar-right">
               <li><%= link_to "Products", products_path %></li>  
-              <li><a href="#">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><%= link_to "About", static_pages_about_path %></li>
+              <li><%= link_to "Contact", static_pages_contact_path %></li>
             </ul>  
           </div> <!-- end nav collapse -->
         </div> <!-- end nav container -->
