Added User model, devise gem, styled login/logout alert, added login/logout alert to navbar, styled sign in and registration forms

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -32,6 +32,11 @@ footer{
 .searchbar{
 	padding-top: 7.5px;
 	padding-left: 50px;
+}
+
+.sessionalert{
+	text-align: center;
+	color: blue;
 } 
 
 //Landing
@@ -83,5 +88,20 @@ footer{
 	width: 25%;
 }
 
+//Session
+
+.loginform{
+	margin: 0 auto;
+	float: none;
+	width: 250px;
+}
+.checkbox{
+	margin-left: 10px;
+}
+
+.checkbox label{
+	padding-top: 2px;
+    padding-left: 0; 
+}
 
 
