New authorization branch. Added CanCanCan integration and restricted access to users views only for the same userid. Added styling to alerts for restricted access (i.e /users/1 for a second user) and a JQuery function to fade out

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,8 +48,12 @@
       </div> <!-- end nav container -->
     </nav><!-- end navbar -->
     <div class="sessionalert">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% if notice %>
+    <p class="notice alert alert-info" role="alert"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+    <p class="alert alert alert-danger" role="alert"><%= alert %></p>
+    <% end %>
     </div>
 
   </div><!-- end container -->
