--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,11 +1,12 @@
       <div class="col-xs-12 col-md-4 clearfix">
       <div class="col-md-12 prodcol">
-      <%= image_tag(product.image_url, class: "img-responsive") %>
+      <%= link_to image_tag(product.image_url, class: "img-responsive"), product_path(product) %>
         <h2><%= product.name %></h2>
         <div class="proddescript"><p><%= product.description %></p></div>
         <p>Color: <%= product.color %></p>
         <strong>$ <%= product.price %></strong>
         <div class="colbuttons">
+        <%= link_to 'Show Details', product_path(product), class: 'btn btn-default', role: 'button' %>
         <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-default', role:'button' %>
 <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default', role:'button' %>
 		</div>
