Added comment controller, and comment creation (with styling), review with starts (raty) and display comments section

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -83,6 +83,16 @@ hr{
 	padding-right: 15px;
 }
 
+.commentarea{
+	max-width: 400px;
+}
+
+.product-reviews{
+	margin-bottom: 100px;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
 @media only screen and (min-width: 769px) and (max-width: 1024px){
 	.prodcol{
 		margin: 0 auto;
