--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -88,9 +88,15 @@ hr{
 }
 
 .product-reviews{
-	margin-bottom: 100px;
+	margin-bottom: 50px;
 	padding-left: 15px;
 	padding-right: 15px;
+}
+
+.pagination{
+	margin-bottom: 100px;
+	width: 100%;
+	text-align: center;
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1024px){
