--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,6 +16,9 @@
   $ <%= @product.price %>
 </h2>
 <h2>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </h2>
+<%= form_tag "/payments/create" do %>
+  <%= render partial: "shared/stripe_checkout_button" %>
+<% end %>
 </div>
 
 
