Removed the logged in requirement to purchase an item, for guests to be able to test-buy items and see their orders reflected there

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container" id="containerindex">
 <h1>Welcome to Bike Berlin</h1>
 <h2>Your source for used bikes in Berlin</h2>
+<h3><em>Please create a dummy account for the best experience and to take advantage of the online shopping functionality</em></h2>
 <%= image_tag("tandem.jpg", class: "img-responsive tandem") %>
 </div>
