Added caching to products pages and also added Memcachier for Heroku

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -29,7 +29,7 @@
 			</td>
 			<td>
 				{{order.product_id}}
-				<small ng-show="order.id"><br>UserId: {{order.user_id}}</small>
+				<small ng-show="order.user_id"><br>UserId: {{order.user_id}}</small>
 			</td>
 			<td>
 			<button ng-click="deleteOrder(order)" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
