--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,5 @@
+<!--<% cache do %>
+<% sleep 2 %> -->
 <div class="container" id="containerindex">
 <h1>Welcome to Bike Berlin</h1>
 <h2>Your source for used bikes in Berlin</h2>
