Small copyright change and attempting to create a new heroku web app to fix search bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
 
 
   <footer>
-    <div class="foottext">&copy; 2015 Bike Berlin</div>
+    <div class="foottext">&copy; 2016 Bike Berlin - Christian Mack. All rights reserved</div>
   </footer>
 </body>
 </html>
